codegen/tests/fail/delegate/not_allowed_typed_receivers.rs
use delegation::delegate;

#[delegate]
trait Channel {
    fn id(this: &Self) -> usize;
}

fn main() {}
